name:                elxa
version:             0.1
synopsis:            Project Synopsis Here
description:         Project Description Here
license:             AllRightsReserved
author:              Author
maintainer:          maintainer@example.com
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.2

executable elxa
  hs-source-dirs: src
  main-is:        Main.hs

  build-depends:
    bytestring                   >= 0.9.1   && < 0.11,
    heist                        >= 0.12    && < 0.13,
    MonadCatchIO-transformers    >= 0.2.1   && < 0.4,
    mtl                          >= 2       && < 3,
    snap                         >= 0.11    && < 0.13,
    snap-core                    >= 0.9     && < 0.11,
    snap-server                  >= 0.9     && < 0.11,
    snap-loader-static           >= 0.9     && < 0.10,
    text                         >= 0.11    && < 0.12,
    time                         >= 1.1     && < 1.5,
    xmlhtml                      >= 0.1,
    base                         >= 4.4     && < 5,
    lens                         >= 3.7.6   && < 3.10,
    github                       >= 0.7.1,
    snaplet-acid-state           >= 0.2.4,
    transformers                 >= 0.3.0.0,
    mongoDB                      >= 1.4.1,
    snaplet-mongodb-minimalistic >= 0.0.6.10,
    configurator                 >= 0.2.0.2,
    monad-control                >= 0.3.2.1,
    network-bitcoin,
    old-locale


  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

